[package]
name = "share-me"
version = "0.1.0"
authors = ["franza <nico.franza@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
handlebars = { version = "3.0.0", features = ["dir_source"] }
serde = "1.0.126"
